--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,383 @@
-.App {
+/*
+=============== 
+Variables
+===============
+*/
+.App{
+ /* background-image: url('https://t4.ftcdn.net/jpg/04/01/90/95/360_F_401909523_qpLIL4uXNQ5BTJCHv26gLkULRWHKCyNt.jpg');*/
+ background-image: url('https://wallpaperaccess.com/full/5045326.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: fit-content;
+  
+  
+}
+:root {
+  /* dark shades of primary color*/
+  --clr-primary-1: hsl(21, 91%, 17%);
+  --clr-primary-2: hsl(21, 84%, 25%);
+  --clr-primary-3: hsl(21, 81%, 29%);
+  --clr-primary-4: hsl(21, 77%, 34%);
+  --clr-primary-5: hsl(21, 62%, 45%);
+  --clr-primary-6: hsl(21, 57%, 50%);
+  --clr-primary-7: hsl(21, 65%, 59%);
+  --clr-primary-8: hsl(21, 80%, 74%);
+  --clr-primary-9: hsl(21, 94%, 87%);
+  --clr-primary-10: hsl(21, 100%, 94%);
+  /* darkest grey - used for headings */
+  --clr-grey-1: hsl(209, 61%, 16%);
+  --clr-grey-2: hsl(211, 39%, 23%);
+  --clr-grey-3: hsl(209, 34%, 30%);
+  --clr-grey-4: hsl(209, 28%, 39%);
+  /* grey used for paragraphs */
+  --clr-grey-5: hsl(210, 22%, 49%);
+  --clr-grey-6: hsl(209, 23%, 60%);
+  --clr-grey-7: hsl(211, 27%, 70%);
+  --clr-grey-8: hsl(210, 31%, 80%);
+  --clr-grey-9: hsl(212, 33%, 89%);
+  --clr-grey-10: hsl(210, 36%, 96%);
+  --clr-white: #fff;
+  --clr-red-dark: hsl(360, 67%, 44%);
+  --clr-red-light: hsl(360, 71%, 66%);
+  --clr-green-dark: hsl(125, 67%, 44%);
+  --clr-green-light: hsl(125, 71%, 66%);
+  --clr-black: #222;
+  --transition: all 0.3s linear;
+  --spacing: 0.1rem;
+  --radius: 0.25rem;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  --max-width: 1170px;
+  --fixed-width: 620px;
+}
+/*
+=============== 
+Global Styles
+===============
+*/
+
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: var(--clr-grey-10);
+  color: var(--clr-grey-1);
+  line-height: 1.5;
+  font-size: 0.875rem;
+}
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+h1,
+h2,
+h3,
+h4 {
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.25rem;
+}
+h4 {
+  font-size: 0.875rem;
+}
+p {
+  margin-bottom: 1.25rem;
+  color: var(--clr-grey-5);
+}
+.rechargeNow{
   text-align: center;
+  margin: auto;
+  
+  
+  
+  
+  
+}
+.leftDiv{
+  color:white;
+  font-weight: bolder;
+  text-decoration: none;
+}
+.leftDiv:hover{
+  color:bisque;
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+#rnLink1{
+  
+ float: right;
+  width: 100px;
+  height: 100px;
+  box-shadow: 1px 2px 12px 12px rgba(84, 84, 85, 0.2); ;
+  background: linear-gradient(90deg, rgba(5,74,126,1) 0%, rgba(3,161,130,1) 100%, rgba(234,242,240,1) 100%);
+  
+  padding-top:20px;
+  padding-bottom: 2px;
+  padding-right: 15px;
+  padding-left: 15px;
+  border-radius: 5px;
+  font-size: 1rem;
+  
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+}
+#rnLink2{
+  
+ 
+  width: 100px;
+  height: 100px;
+  box-shadow: 1px 2px 12px 12px rgba(84, 84, 85, 0.2); ;
+  background: linear-gradient(90deg, rgba(5,74,126,1) 0%, rgba(3,161,130,1) 100%, rgba(234,242,240,1) 100%);
+  
+  padding-top:20px;
+  padding-bottom: 2px;
+  padding-right: 15px;
+  padding-left: 15px;
+  border-radius: 5px;
+  font-size: 1rem;
+  float: left;
+  clear: none;
+
+}
+@media screen and (min-width: 800px) {
+  
+  
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  h3 {
+    font-size: 1.75rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
+  body {
+    font-size: 1rem;
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
   }
 }
+/*  global classes */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* section */
+.section {
+  width: 90vw;
+  margin: 1.5rem auto;
+  padding-bottom: 100px;
+  
+  max-width: var(--max-width);
+  
+}
+#listNav{
+  left:0;
+}
+
+@media screen and (min-width: 992px) {
+  .section {
+    width: 95vw;
+    padding-bottom: 100px;
+  }
+  .title{
+    font-size: 1rem;
+  }
+  
+}
+@media screen and (max-width:600px) {
+  #rnLink1{
+  
+    float: left;
+     width: 100%;
+     
+     height: 50px;
+     box-shadow: 1px 2px 12px 12px rgba(84, 84, 85, 0.2); ;
+     background: linear-gradient(90deg, rgba(5,74,126,1) 0%, rgba(3,161,130,1) 100%, rgba(234,242,240,1) 100%);
+     
+     padding-top:10px;
+     padding-bottom: 2px;
+     padding-right: 15px;
+     padding-left: 15px;
+     border-radius: 5px;
+     font-size: 1rem;
+     
+   
+   }
+   #rnLink2{
+  
+    float: left;
+     width: 100%;
+     
+     height: 50px;
+     box-shadow: 1px 2px 12px 12px rgba(84, 84, 85, 0.2); ;
+     background: linear-gradient(90deg, rgba(5,74,126,1) 0%, rgba(3,161,130,1) 100%, rgba(234,242,240,1) 100%);
+     margin-top: 10px;
+     padding-top:10px;
+     padding-bottom: 2px;
+     padding-right: 15px;
+     padding-left: 15px;
+     border-radius: 5px;
+     font-size: 1rem;
+     
+   
+   }
+   
+  
+}
+/*
+=============== 
+Slider
+===============
+*/
+.title {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.title h2 {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-weight: 500;
 }
-
-.App-link {
-  color: #61dafb;
+.title span {
+  font-size: 0.85em;
+  color: var(--clr-primary-5);
+  margin-right: 1rem;
+  font-weight: 700;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.underline {
+  width: 6rem;
+  height: 0.25rem;
+  background: var(--clr-primary-5);
+  margin-left: auto;
+  margin-right: auto;
+}
+.section-center {
+  margin: 0 auto;
+  
+  width: 80vw;
+  /* have to have a height */
+  height: 450px;
+  max-width: 800px;
+  text-align: center;
+  position: relative;
+  display: flex;
+  overflow: hidden;
+}
+.person-img {
+  
+  margin-bottom: 1rem;
+  width: 450px;
+  height: 300px;
+  object-fit: cover;
+  
+  box-shadow: var(--dark-shadow);
+}
+article h4 {
+  text-transform: uppercase;
+  color: var(--clr-primary-5);
+  margin-bottom: 0.25rem;
+}
+.title {
+  text-transform: capitalize;
+  margin-bottom: 0.75rem;
+  font-size: 2rem;
+  color: teal;
+  
+}
+.text {
+  max-width: 35em;
+  margin: 0 auto;
+  margin-top: 2rem;
+  line-height: 2;
+  
+  color: var(--clr-grey-5);
+}
+.icon {
+  font-size: 3rem;
+  margin-top: 1rem;
+  color: var(--clr-primary-5);
+}
+.prev,
+.next {
+  position: absolute;
+  top: 200px;
+  transform: translateY(-50%);
+  background: var(--clr-grey-5);
+  color: var(--clr-white);
+  width: 1.25rem;
+  height: 1.25rem;
+  display: grid;
+  place-items: center;
+  border-color: transparent;
+  font-size: 1rem;
+  border-radius: var(--radius);
+  cursor: pointer;
+  transition: var(--transition);
+}
+.prev:hover,
+.next:hover {
+  background: var(--clr-primary-5);
+}
+.prev {
+  left: 0;
+}
+.next {
+  right: 0;
+}
+@media (min-width: 800px) {
+  .text {
+    max-width: 45em;
   }
-  to {
-    transform: rotate(360deg);
+  .prev,
+  .next {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.5rem;
   }
+  .title{
+    font-size: 2rem;
+  }
+}
+article {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: var(--transition);
+}
+article.activeSlide {
+  opacity: 1;
+  transform: translateX(0);
+}
+article.lastSlide {
+  transform: translateX(-100%);
+}
+article.nextSlide {
+  transform: translateX(100%);
 }
